Changelog
=========

1.3a2 - Unreleased
------------------


1.3a1 - 2009-11-17
------------------

- Access the subtopics page directly since the tab is now hidden by default.
  [davisagli]

- The [changeset:30835 test] for #7784 was borked after all. While the
  transaction is properly recorded when testing through-the-web, both with and
  without ZEO, the test either shows a different transaction (for Plone 3.x) or
  nothing at all (for Plone 4.0). This might have to do with the way
  `DemoStorage` handles undos/aborts, but for now the test simply gets disabled
  again... :(
  [witsch]

- Add test to verify the [changeset:30810 fix] for the [ticket:7784 missing
  undo log entries] after removing items via the "delete" action (refs #7784)
  [witsch]

1.2 - 2009-10-10
----------------

- Also catch `NotFound` exceptions when trying to resolve linked objects.
  [optilude]

1.1 - 2009-08-31
----------------

- Make compatible with repoze.zope2. See README.txt for notes on how to
  deploy.
  [optilude]

- Don't use id() to record confirmed items. It can change on request
  boundaries. Use an encoded _p_oid instead.
  [optilude]

- Also regard traversal adapters when trying to resolve links into their
  corresponding objects.
  [witsch]

- Fix some tests to make sure that text values are treated as text/html
  in Zope 2.12, whose zope.contenttype is stricter when guessing the
  mimetype.
  [davisagli]

- Don't install the exception hook in Zope 2.12 where it is no longer
  needed and breaks exception handling.
  [davisagli]

1.0.12 - 2009-06-03
-------------------

- Compare UIDs instead of objects during cleanup of breach information in
  order to avoid expensive hashing in "... in ..." expressions.  This
  makes removing linked objects much faster.
  [regebro]

1.0.11 - 2008-11-15
-------------------

- Fix code to not silently swallow `ConflictErrors`.
  [witsch]

- Fix issue with dangling references to already removed objects.