@@ -4,6 +4,9 @@ Changelog
 1.3a2 - Unreleased
 ------------------
 
+- Fix issue with the final submission of the delete confirmation page in 
+  Zope 2.12. This closes http://dev.plone.org/plone/ticket/9699.
+  [davisagli]
 
 1.3a1 - 2009-11-17
 ------------------
